[package]
name = "mchprc"
version = "0.1.0"
authors = ["Nicholas Stonecipher <nickster258@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
gl = "0.14.0"
nalgebra = "0.21"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
